# synacktiv-summer-chall-2025-ocinception

./: .gitignore  README.md  Vagrantfile  the_ultimate_test_script.sh  writeup.md
ocinception_1_rust_std/: Cargo.toml  test_features.sh
ocinception_1_rust_std/src/: main.rs
ocinception_2_libc_nostd/: Cargo.toml  experiment_zstd_rle.py  i686-unknown-none.json  test_all.py
ocinception_2_libc_nostd/.cargo/: config.toml
ocinception_2_libc_nostd/src/: global_strings.rs  gzip.rs  linux_syscalls.rs  main.rs  mem_ops.rs  nostd_bump_alloc.rs  nostd_libc_alloc.rs  panic.rs  sha256.rs  zstd.rs
ocinception_3_asm/: Cargo.toml  disasm.sh  i686-unknown-optim.json  linker_script_common_bss.inc.ld  linker_script_elf32.ld  linker_script_optim.ld  test_all.py
ocinception_3_asm/.cargo/: config.toml
ocinception_3_asm/src/: gzip.rs  main.rs  nostd_bump_alloc.rs
